<resources>
    <string name="app_name" translatable="false">Stella Pals</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Error Messages -->
    <string name="em_unable_to_get_action_bar">Unable to get toolbar</string>
    <string name="em_no_internet_connection">No internet connection</string>
    <string name="em_invalid_username_or_password">Invalid username or password</string>
    <string name="em_invalid_username_or_email">Invalid username or email</string>
    <string name="em_please_enter_your_username_or_email">Please enter your username or email</string>
    <string name="em_please_enter_a_username">Please enter a username</string>
    <string name="em_username_has_been_taken">Username has already been taken</string>
    <string name="em_please_enter_a_email">Please enter a email</string>
    <string name="em_email_has_been_used_before">Email has been used before</string>
    <string name="em_please_enter_a_valid_email">Please enter a valid email</string>
    <string name="em_please_enter_a_password">Please enter a password</string>
    <string name="em_invalid_password">Invalid password</string>

    <!-- Hints -->
    <string name="h_username_or_email">Username or email</string>
    <string name="h_password">Password</string>
    <string name="h_username">Username</string>
    <string name="h_email">Email</string>
    <string name="h_male">Male</string>
    <string name="h_female">Female</string>
    <string name="h_sex">Sex</string>
    <string name="h_country">Country</string>

    <!-- Dialog Title -->
    <string name="d_loading">Loading&#8230;</string>

    <!-- Button text -->
    <string name="login">Login</string>
    <string name="register">Register</string>

    <!-- Titles -->
    <string name="title_activity_login">Login</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_register">Register</string>

    <!-- Content Description -->
    <string name="cd_profile_picture">Profile Picture</string>

    <!-- Progress Text -->
    <string name="pt_logging_in">Logging In&#8230;</string>

    <!-- Arrays -->
    <string-array name="country_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>British Virgin Islands</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Cocos Islands</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Cook Islands</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Democratic Republic of the Congo</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>East Timor</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Falkland Islands</item>
        <item>Faroe Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>French Guiana</item>
        <item>French Polynesia</item>
        <item>French Southern Territories</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guernsey</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Isle of Man</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Ivory Coast</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jersey</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macao</item>
        <item>Macedonia</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mayotte</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Montserrat</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>Netherlands Antilles</item>
        <item>New Caledonia</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Niue</item>
        <item>North Korea</item>
        <item>Northern Mariana Islands</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Palestinian Territory</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Republic of the Congo</item>
        <item>Reunion</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Barthélemy</item>
        <item>Saint Helena</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Martin</item>
        <item>Saint Pierre and Miquelon</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Svalbard and Jan Mayen</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Turks and Caicos Islands</item>
        <item>Tuvalu</item>
        <item>U.S. Virgin Islands</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Vatican</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Wallis and Futuna</item>
        <item>Western Sahara</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>

    <string-array name="country_code_array">
        <item>AF</item>
        <item>AL</item>
        <item>DZ</item>
        <item>AS</item>
        <item>AD</item>
        <item>AO</item>
        <item>AI</item>
        <item>AG</item>
        <item>AR</item>
        <item>AM</item>
        <item>AW</item>
        <item>AU</item>
        <item>AT</item>
        <item>AZ</item>
        <item>BS</item>
        <item>BH</item>
        <item>BD</item>
        <item>BB</item>
        <item>BY</item>
        <item>BE</item>
        <item>BZ</item>
        <item>BJ</item>
        <item>BM</item>
        <item>BT</item>
        <item>BO</item>
        <item>BA</item>
        <item>BW</item>
        <item>BR</item>
        <item>VG</item>
        <item>BN</item>
        <item>BG</item>
        <item>BF</item>
        <item>BI</item>
        <item>KH</item>
        <item>CM</item>
        <item>CA</item>
        <item>CV</item>
        <item>KY</item>
        <item>CF</item>
        <item>TD</item>
        <item>CL</item>
        <item>CN</item>
        <item>CC</item>
        <item>CO</item>
        <item>KM</item>
        <item>CK</item>
        <item>CR</item>
        <item>HR</item>
        <item>CU</item>
        <item>CY</item>
        <item>CZ</item>
        <item>CD</item>
        <item>DK</item>
        <item>DJ</item>
        <item>DM</item>
        <item>DO</item>
        <item>TL</item>
        <item>EC</item>
        <item>EG</item>
        <item>SV</item>
        <item>GQ</item>
        <item>ER</item>
        <item>EE</item>
        <item>ET</item>
        <item>FK</item>
        <item>FO</item>
        <item>FJ</item>
        <item>FI</item>
        <item>FR</item>
        <item>GF</item>
        <item>PF</item>
        <item>TF</item>
        <item>GA</item>
        <item>GM</item>
        <item>GE</item>
        <item>DE</item>
        <item>GH</item>
        <item>GI</item>
        <item>GR</item>
        <item>GL</item>
        <item>GD</item>
        <item>GP</item>
        <item>GU</item>
        <item>GT</item>
        <item>GG</item>
        <item>GN</item>
        <item>GW</item>
        <item>GY</item>
        <item>HT</item>
        <item>HN</item>
        <item>HK</item>
        <item>HU</item>
        <item>IS</item>
        <item>IN</item>
        <item>ID</item>
        <item>IR</item>
        <item>IQ</item>
        <item>IE</item>
        <item>IM</item>
        <item>IL</item>
        <item>IT</item>
        <item>CI</item>
        <item>JM</item>
        <item>JP</item>
        <item>JE</item>
        <item>JO</item>
        <item>KZ</item>
        <item>KE</item>
        <item>KI</item>
        <item>KW</item>
        <item>KG</item>
        <item>LA</item>
        <item>LV</item>
        <item>LB</item>
        <item>LS</item>
        <item>LR</item>
        <item>LY</item>
        <item>LI</item>
        <item>LT</item>
        <item>LU</item>
        <item>MO</item>
        <item>MK</item>
        <item>MG</item>
        <item>MW</item>
        <item>MY</item>
        <item>MV</item>
        <item>ML</item>
        <item>MT</item>
        <item>MH</item>
        <item>MQ</item>
        <item>MR</item>
        <item>MU</item>
        <item>YT</item>
        <item>MX</item>
        <item>FM</item>
        <item>MD</item>
        <item>MC</item>
        <item>MN</item>
        <item>ME</item>
        <item>MS</item>
        <item>MA</item>
        <item>MZ</item>
        <item>MM</item>
        <item>NA</item>
        <item>NP</item>
        <item>NL</item>
        <item>AN</item>
        <item>NC</item>
        <item>NZ</item>
        <item>NI</item>
        <item>NE</item>
        <item>NG</item>
        <item>NU</item>
        <item>KP</item>
        <item>MP</item>
        <item>NO</item>
        <item>OM</item>
        <item>PK</item>
        <item>PW</item>
        <item>PS</item>
        <item>PA</item>
        <item>PG</item>
        <item>PY</item>
        <item>PE</item>
        <item>PH</item>
        <item>PL</item>
        <item>PT</item>
        <item>PR</item>
        <item>QA</item>
        <item>CG</item>
        <item>RE</item>
        <item>RO</item>
        <item>RU</item>
        <item>RW</item>
        <item>BL</item>
        <item>SH</item>
        <item>KN</item>
        <item>LC</item>
        <item>MF</item>
        <item>PM</item>
        <item>VC</item>
        <item>WS</item>
        <item>SM</item>
        <item>ST</item>
        <item>SA</item>
        <item>SN</item>
        <item>RS</item>
        <item>SC</item>
        <item>SL</item>
        <item>SG</item>
        <item>SK</item>
        <item>SI</item>
        <item>SB</item>
        <item>SO</item>
        <item>ZA</item>
        <item>KR</item>
        <item>ES</item>
        <item>LK</item>
        <item>SD</item>
        <item>SR</item>
        <item>SJ</item>
        <item>SZ</item>
        <item>SE</item>
        <item>CH</item>
        <item>SY</item>
        <item>TW</item>
        <item>TJ</item>
        <item>TZ</item>
        <item>TH</item>
        <item>TG</item>
        <item>TO</item>
        <item>TT</item>
        <item>TN</item>
        <item>TR</item>
        <item>TM</item>
        <item>TC</item>
        <item>TV</item>
        <item>VI</item>
        <item>UG</item>
        <item>UA</item>
        <item>AE</item>
        <item>GB</item>
        <item>US</item>
        <item>UY</item>
        <item>UZ</item>
        <item>VU</item>
        <item>VA</item>
        <item>VE</item>
        <item>VN</item>
        <item>WF</item>
        <item>EH</item>
        <item>YE</item>
        <item>ZM</item>
        <item>ZW</item>
    </string-array>
</resources>
